--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -22,3 +22,101 @@ navigator. geolocation
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
 - 평가일시 : 5/1(월)
 - 포트폴리오 페이지 작성
+
+
+### 이론들
+```html
+<!-- 
+	1. 제이쿼리 개념
+		. 웹사이트에 자바스크립트를 쉽게 활용할 수 있도록 도와주는 오픈소스 기반의
+			자바스크립트 라이브러리이다.
+
+		. 특징
+			- 엘리먼트 쉽게 찾고 조작할 수 있다.
+			- 거의 모든 웹 브라우저에서 호환성이 매우 뛰어나다
+			- 네트워크, 애니메이션 등 다양한 기능을 제공한다.
+			- 메서드 체이닝기법을 활용해서 짧고 용이한 코드구현을 지원한다.
+			- 다양한 플러그인들이 웹상에 공개되어 있어서 활용해서 확장해 나갈수 있다.
+			- 가상 DOM을 채용한 React, Vue 등의 프레임워크의 라이브러리도 채용하고 있다.
+
+		. 라이브러리 : 그대로 불러와서 사용할 수 있도록 구성된 기능적인 함수나 작은 프로그램 집합
+
+	2. 구현문법
+		.		$(document).ready(function(){
+					// 실행문;
+				});
+
+				$(function(){
+					// 실행문;
+				});
+
+				$(()=>{
+					// 실행문;
+					$('선택자').css()
+					$('선택자').append().
+				})
+
+	3. 기본활용
+				$('선택자').css('속석명','속성값').css().css(),,,
+				$('선택자').css({'속성명' : '속성값', '속성명':'속성값',,,})
+
+				$('선택자').method().method().method()...
+
+	4. 선택자
+			* 기본선택
+				$("*")			전체선택
+				$("h1,p,li") 	그룹선택자
+				$("#아이디")
+				$(".클래스")
+				$("ul li")		 자손선택자 - 하위요소들
+				$("ul>li")		자식선택자
+
+			* 탐색선택자
+				$("선택요소").parent()	선택요소를 기준으로 부모요소 선택
+				$("선택요소").children("태그명") 선택요소를 기준으로 태그들
+				$("선택요소").prev()		선택요소를 기준으로 이전 형제
+				$("선택요소").next()	선택요소를 기준으로 다음 요소
+				$("선택요소").silblings("태그")	선택요소를 기준으로 해당 태그 형제요소들
+				$("선택요소").not(".m")		선택요소중에 클래스가 m이 아닌 요소들 선택
+				$("선택요소").has("span")	선택요소중에 span요소를 포함하고 있는 요소 선택
+				$("선택요소").add('p')		선택요소와 p요소를 선택한다.
+
+			* 속성선택자
+				$("span[class]").css()	span의 class속성이 있는 요소 선택
+				$(".list>lo[class="list_1"]).css()
+				$(".list>li[class*="list_1"]).css()
+
+			* 필터선택자
+				${"tr:even"}.css()	tr요소중 짝수행만 선택
+				${"tr:odd"}.css()	tr요소중 홀수행만 선택
+				${"td:first"}.css()	td요소중 첫번째만 선택
+				$("td:last").css()	td요소중 마지막 td요소를 선택
+				$(":header").css()	h1~h6까지 요소 선택
+				$("li:eq(0)").css()	li요소중 인덱스가 0인 요소선택
+				$("li:gt(0)").css()	인덱스가 0보다 큰 li요소
+				$("li:lt(2)").css()	인덱스가 2보다 작은 li요소
+				$("li:not(.bg)").css()	li요소중에 class가 bg가 아닌 li요소
+				$(":root").css()	html 선택
+				$(":animated").css()	움직이는 요소 선택
+
+				$("span:first-child").css()	첫번째 자식요소
+				$("span:last-child").css()	마지막 마지막요소
+				$("nth-child(2)").css()		두번쨰 자식요소
+
+			* 콘텐츠 필터 선택자
+				$("p:contains('html')").css() p요소중에 html 텍스트를 포함하고 있는 p요소
+				$("div:empty").css()	div요소중에 자식요소가 없는 div요소선택
+				$("span:parent").css()	??
+				$("section:has(article)").css()	section요소중에 article 하위요소를
+												가지고 있는 요소 선택
+
+			* 폼필터 선택자
+				$("input:text").css()		text타입의 input요소
+				$("input:password").css()	
+				$("option:selected")
+				$("")
+
+ -->
+
+
+```
