--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -120,3 +120,106 @@ navigator. geolocation
 
 
 ```
+
+
+### JQuery 간단 연습
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript" src="./js/jquery-3.6.4.js"></script>
+<script>
+	$(()=>{
+		$("*").css("font-size","30px");
+
+		// h1은 글자색을 빠간색으로
+		$("h1").css("color",'red');
+
+		// firstTitle아이디의 요소는 글자색을 green으로
+		$("#firstTitle").css("color",'green');
+
+		// nextTitle의 클래스는 글자색을 blue로
+		$(".nextTitle").css("color",'blue');
+
+		// obj2의 자식 li의 글자굵기는 bold, 글자색은 pink
+		$(".obj2>li").css({"font-weight": "bold", "color": "pink"});
+
+		// obj2클래스의 theObj1 클래스 자식의 글자색은 purple로
+		$(".obj2 .theObj1").css({"color":"purple"});
+
+		// obj4클래스의 부모요소에는 외곽선을 dashed 2px #f00으로
+		$(".obj4").parent().css({"border":"dashed 2px #f00"});
+
+		// wrap아이디의 자손 h3의 글자크기 20px, 배경색은 yellow로
+		$("#wrap h3").css({"font-size":"20px", "background-color":"yellow"});
+
+		// obj3클래스의 다음 형제요소의 글자색은 orange색으로
+		$(".obj3").next().css({"color":"orange"});
+
+		// obj4클래스의 앞에 형제요소의 글자정렬은 오른쪽으로
+		$(".obj4").prev().css({"text-align":"right"});
+
+		// obj5의 li 형제(siblings)들은 글자를 가운데로 정렬
+		$(".obj5").siblings().css({"text-align":"center"});
+
+		// input요소에 text타입인 요소의 배경색은 green, 외곽선은 2px solid #357
+		//						글자색은 흰색
+		$("input:text").css({"background-color":"green",
+							"border":"2px solid #357",
+							"color":"white"
+		});
+
+		// container클래스 요소의 뒤에 <a href="more.html">more</a> 요소 붙이기
+		$(".container").after('<a href="more.html">more</a>');
+	});
+</script>
+</head>
+<body>
+	<div id="wrap">
+		<h1>제이쿼리 선택자 학습</h1>
+		<hr>
+		<h2 id="firstTitle">선택자</h2>
+		<h3 class="nextTitle">부모요소선택자</h3>
+		<div>
+			<p class="obj1">현재 id가 "obj"인 요소를 기준으로, 부모요소는 'div'요소 이다.</p>
+		</div>
+		<h3>자식요소선택자</h3>
+		<ul class="obj2">
+			<li>리스트1</li>
+			<li class="theObj1">리스트2</li>
+			<li>리스트3</li>
+		</ul>
+		<h3>형요소 선택자</h3>
+		<ul>
+			<li>리스트4</li>
+			<li class="obj3">리스트5</li>
+			<li>리스트6</li>
+		</ul>
+		<h3>동생 요소 선택자</h3>
+		<ul>
+			<li>리스트7</li>
+			<li class="obj4">리스트8</li>
+			<li>리스트9</li>
+		</ul>
+		<h3>형제요소 선택자</h3>
+		<ul>
+			<li>리스트10</li>
+			<li class="obj5">리스트11</li>
+			<li>리스트12</li>
+		</ul>
+		<h3>입력요소 선택자</h3>
+		<p>
+			<label for="user_name1">이름</label>
+			<input type="text" name="user_name" id="user">
+		</p>
+		<p>
+			<label for="user_name2">이름</label>
+			<input type="text" name="user_name" id="user">
+		</p>
+	</div>
+	<div class="container"></div>
+</body>
+</html>
+```
