--- a/성수만/해야할것.MD
+++ b/성수만/해야할것.MD
@@ -3,3 +3,20 @@
 - 사업체등록 구현 ( 사업자만 가능 )
 - 게시물에 대한 좋아요,즐겨찾기 기능 넣기
 - 좋아요, 즐겨찾기, 조회수에 따른 1 2 3 위 메인에 띄우기
+
+```
+웹 개발에서 회원가입 정보를 저장할 때는 일반적으로 데이터베이스를 사용합니다
+. 가장 많이 사용되는 데이터베이스 중 하나는 MySQL이며, 다른 데이터베이스로는 PostgreSQL, MongoDB, Oracle 등이 있습니다.
+
+Spring Boot 프레임워크를 사용하면, 데이터베이스와의 연동을 위한 여러 가지 라
+이브러리와 도구가 포함되어 있어 개발자가 편리하게 데이터베이스를 사용할 수 있습
+니다. Spring Data JPA는 Spring Boot에서 자주 사용되는 ORM(Object-Relational Mapping) 프레임워크입니다.
+
+회원가입 정보를 입력받는 폼은 HTML과 CSS로 구성하고, 이를 서버로 전송할 때
+는 HTTP 요청을 이용합니다. 서버에서는 Spring MVC를 사용해 요청을 처리하고, 
+입력받은 회원가입 정보를 데이터베이스에 저장합니다. 이렇게 저장된 정보는 서버에서 필요한 경우 데이터베이스에서 조회하거나 수정할 수 있습니다.
+
+따라서, Spring Boot와 Spring Data JPA를 이용해 MySQL 데이터베이스에 회원가
+입 정보를 저장하고 조회할 수 있습니다. 이를 위해 회원가입 폼을 작성하고, 서버
+에서 해당 폼을 처리하는 컨트롤러를 작성해야 합니다. 회원가입 폼을 작성할 때는 Thymeleaf 같은 템플릿 엔진을 사용하면 편리합니다.
+```
