--- a/성수만/해야할것.MD
+++ b/성수만/해야할것.MD
@@ -14,9 +14,12 @@ Spring Boot 프레임워크를 사용하면, 데이터베이스와의 연동을 
 
 회원가입 정보를 입력받는 폼은 HTML과 CSS로 구성하고, 이를 서버로 전송할 때
 는 HTTP 요청을 이용합니다. 서버에서는 Spring MVC를 사용해 요청을 처리하고, 
-입력받은 회원가입 정보를 데이터베이스에 저장합니다. 이렇게 저장된 정보는 서버에서 필요한 경우 데이터베이스에서 조회하거나 수정할 수 있습니다.
+입력받은 회원가입 정보를 데이터베이스에 저장합니다. 이렇게 저장된 정
+보는 서버에서 필요한 경우 데이터베이스에서 조회하거나 수정할 수 있습니다.
 
 따라서, Spring Boot와 Spring Data JPA를 이용해 MySQL 데이터베이스에 회원가
 입 정보를 저장하고 조회할 수 있습니다. 이를 위해 회원가입 폼을 작성하고, 서버
-에서 해당 폼을 처리하는 컨트롤러를 작성해야 합니다. 회원가입 폼을 작성할 때는 Thymeleaf 같은 템플릿 엔진을 사용하면 편리합니다.
+에서 해당 폼을 처리하는 컨트롤러를 작성해야 합니다. 회원가입 폼을 작성
+할 때는 Thymeleaf 같은 템플릿 엔진을 사용하면 편리합니다.
 ```
+
