--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -118,6 +118,32 @@ navigator. geolocation
 
  -->
 
+<!-- 
+	$('선택요소').html('새요소')		선택한 요소의 하위요소들을 새요소로 변경
+	$('선택요소').text('새텍스트')		선택한 요소의 텍스트생성
+	$('선택요소').text()			선택한 요소의 텍스트 가져오기
+	$('선택요소').text(function(inex.t))	해당 인덱스 문자를 t로
+
+	$('선택요소').append('새요소')	선택요소의 마지막 자식으로
+	$('선택요소').prepend('새요소')	선택요소의 첫번째 자식으로
+	$('새요소').insertBefore('기준요소')
+	$('새요소').insertAfter('기준요소')
+	$('선택요소').clone(true/false) 선택요소를 복제(true:하위요소포함)
+	$('선택요소').remove()
+
+	$('선택요소').attr('속성')		속성값 읽기
+	$('선택요소').attr('속성','값')	속성지정
+	$('선택요소').addClass("클래스명")
+	$('선택요소').removeClass("클래스명")
+	$('선택요소').toggleClass("클래스명")
+	$('선택요소').hasClass('클래스명')	해당 클래스이면 true반환
+	$('선택요소').wrap('<div></div>')	선택요소를 div로 감싼다.
+	$('선택요소').wrapAll('<div></div>')	선택요소 전체를 div로 감싼다.
+
+	$.each(배열객체, function(index,value){})
+	$.map(배열객체, function(value,index){})
+ -->
+
 
 ```
 
