--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -249,3 +249,71 @@ navigator. geolocation
 </body>
 </html>
 ```
+
+### JQuery연습2
+```html
+<!DOCTYPE html>
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript" src="./js/jquery-3.6.4.js"></script>
+<script>
+
+	$(()=>{
+		// theTitle클래스 요소를 <a href=''>HTML조작</a>
+		$(".theTitle").html('<a href="">HTML조작</a>');
+
+		// obj1클래스의 텍스트를 'list1'을 list4로 변경
+		$(".obj1").text('list4');
+
+		// list3 아이디요소의 마지막요소로 <li>새로 추가한 요소_끝</li> 추가
+		$("#list3").append("<li>새로 추가한 요소_끝</li>");
+
+		// list3 아이디요소의 맨 앞으로 <li>새로운 추가한 요소_앞</li> 추가
+		$("#list3").prepend("<li>새로 추가한 요소_앞</li>");
+
+		// <li>insertBefore로 추가한 새로운 요소</li>를 list3 아이디의 자손 li중 5번(eq(4))째 앞에 추가
+		$("<li>insertBefore로 추가한 새로운 요소</li>").insertBefore($("#list3 li").eq(4));
+
+
+		// <li>insertBefore로 새로운요소</li>를 list3 아이디의 6번째 뒤에 추가
+		$("<li>insertBefore로 추가한 새로운 요소</li>").insertAfter($("#list3 li").eq(5));
+
+
+		// list3 아이디의 자손 li중에 class속성 읽어와서 alert()출력해보기
+		let a = $("#list3 .obj1").attr("class");
+		alert(a);
+		
+		// list3 아이디의 자손 li중 첫번째 요소의 class를 obj_new로 변경
+		$(".obj1").removeClass('obj1').
+								addClass('obj_new');
+		
+		// obj_new클래스를 가진 요소의 배경색을 skyblue, border를 3px solid #f0f로,
+		// 글자색 blue
+
+		$(".obj_new").css({
+			"background-color": "skyblue",
+			"border": "3px solid #f0f",
+			"color": "blue"
+		});
+				
+
+
+	});
+
+</script>
+</head>
+<body>
+	<div id="wrap">
+		<h2 class="theTitle">HTML 조작</h2>
+		<ul id="list3">
+			<li class="obj1">list1</li>
+			<li>list2</li>
+			<li>list3</li>
+		</ul>
+	</div>
+</body>
+</html>
+```
