--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -144,6 +144,34 @@ navigator. geolocation
 	$.map(배열객체, function(value,index){})
  -->
 
+<!--
+	$(()=>{
+		1. 어떤객체에
+		2. 무슨일이 생기며
+		3. 어떤것을 어떻게 해줘라
+
+		$('선택요소').click(function(){
+			실행문;
+			$('선택요소').css();
+		});
+	});
+
+	. 이벤트 종류
+		. click()
+		. dbclick()
+		. mouseover()
+		. mouseout()
+		. focus()
+		등등
+
+		. toggle()	:	클릭할때마다 순차적으로 함수를 번갈아가면서 수행
+		. hover()	:	마우스를 올렸을때 마우스가 벗어났을때 각각의 함수를 실행
+		. unload()	:	문서를 종료할때
+		. change()	:	값이 바뀌고, 포커스가 옮겨졌을떄 실행
+		. bind()	:	여러개의 이벤트를 적용시에 사용
+
+ -->
+
 
 ```
 
