--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -351,3 +351,74 @@ navigator. geolocation
 </body>
 </html>
 ```
+
+### 메인페이지 위에 메뉴들 쓸떄 쓸만할거 같다
+```html
+<!DOCTYPE html>
+<!-- 
+	- show()
+	- hide()
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript" src="./js//jquery-3.6.4.js"></script>
+<script>
+
+	$(()=>{
+		$("#show_btn").click(function(){
+			$(".text1").show();
+		});
+
+		$('#hide_btn').click(function(){
+			$(".text1").hide();
+		});
+
+
+		$('#toggle_btn1').click(function(){
+			if($('.text2').is(':visible')){
+				$(".text2").hide()
+			}else{
+				$(".text2").show()
+			}
+		});
+
+		$("#toggle_btn2").click(function(){
+			$(".text2").toggle("slow");
+		});
+
+		$("#menubtn").click(function(){
+			$("#menu").toggle(500);
+		});
+
+	});
+
+	
+
+</script>
+</head>
+<body>
+	<div>
+		<div class="text1">안녕하세요(text1)</div>
+		<div><input type="button" id="show_btn" value="text1_show"></div>
+		<div><input type="button" id="hide_btn" value="text1_hide"></div>
+		<br><br>
+
+		<div class="text2">안녕하세요(text2)</div>
+		<div><input type="button" id="toggle_btn1" value="text1_if_toggle"></div>
+		<br>
+
+		<div><input type="button" id="toggle_btn2" value="text2_if_toggle"></div>
+		<br><br>
+		<button id="menubtn">토글메뉴</button>
+		<ul id="menu">
+			<li>메뉴1</li>
+			<li>메뉴2</li>
+			<li>메뉴3</li>
+		</ul>
+	</div>
+</body>
+</html>
+```
