--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -422,3 +422,62 @@ navigator. geolocation
 </body>
 </html>
 ```
+
+
+### 옆에 있는거.. siblings을 이용해도 됨
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript" src="./js/jquery-3.6.4.js"></script>
+<style>
+	.menu a{cursor: pointer;}
+	.menu .hide{background: yellow;};
+</style>
+<script>
+	$(()=>{
+		$(".menu>a").click(function(){
+			let submenu = $(this).next('ul');
+			if(submenu.is(":visible")){
+				submenu.slideUp();
+			}else{
+				submenu.slideDown();
+			}
+		})
+	})
+	
+</script>
+</head>
+<body>
+	<div>
+		<ul>
+			<li class="menu">
+				<a><img src="./image/heart1.png" width="100" height="100"></a>
+				<ul class="hide">
+					<li>메뉴1-1</li>
+					<li>메뉴1-2</li>
+					<li>메뉴1-3</li>
+					<li>메뉴1-4</li>
+					<li>메뉴11-5</li>
+					<li>메뉴1-6</li>
+				</ul>
+			</li>
+
+			<li class="menu">
+				<a><img src="./image/favorite1.png" width="100" height="100"></a>
+				<ul class="hide">
+					<li>메뉴1-1</li>
+					<li>메뉴1-2</li>
+					<li>메뉴1-3</li>
+					<li>메뉴1-4</li>
+					<li>메뉴11-5</li>
+					<li>메뉴1-6</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+</body>
+</html>
+```
