--- a/4월 3주차/4월 20일.MD
+++ b/4월 3주차/4월 20일.MD
@@ -481,3 +481,200 @@ navigator. geolocation
 </body>
 </html>
 ```
+
+### hover를 제이쿼리로
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript" src="./js/jquery-3.6.4.js"></script>
+<style>
+
+	*{margin: 0; padding: 0;}
+
+	body{
+		font-family: 'Courier New', Courier, monospace;
+		font-size: 12px;
+		font-weight: bolder;
+		color: #000;
+	}
+
+	li{
+		list-style: none;
+	}
+
+	a{
+		text-decoration: none;
+		color: #000;
+	}
+
+	h1{
+		text-align: center;
+		padding: 10px 0;
+	}
+
+	#gnb{
+		width: 600px;
+		margin: 0 auto;
+	}
+
+	#gnb:after{
+		content: "";
+		display: block;
+		clear: both;
+	}
+
+	#gnb .m{
+		float: left; /* 한쪽 정렬 */
+		width: 120px;
+		text-align: center;
+		position: relative;
+	}
+
+	#gnb .m>a{
+		display: block;
+		height: 40px;
+		line-height: 40px;
+		font-size: 1.4em;
+	}
+
+	#gnb .m.on>a{
+		border-bottom: 4px solid #725f3f;
+		box-sizing: border-box;
+	}
+
+	#gnb .m ul{
+		position: absolute;
+		left: 0;
+		top: 40px;
+		width: 100%;
+		background: #000;
+		display: none;
+	}
+
+	#gnb .m ul li a{
+		display: block;
+		color: #fff;
+		padding: 12px 0;
+		border-bottom: 1px solid #333;
+	}
+
+	#gnb .m ul li:last-child a{
+		border: none;
+	}
+
+	#gnb .m ul li a:hover,
+	#gnb .m ul li a:active,
+	#gnb .m ul li a:focus{
+		background: #fff;
+		color: #000;
+	}
+
+	#visual{
+		background: url() no-repeat center center;
+		width: 100%;
+		height: 300px;
+		background-color: lightblue;
+		min-width: 600px;
+	}
+
+	#visual a{
+		display: block;
+		width: 1000px;
+		height: 500px;
+		margin: 0 auto;
+		text-indent: -9999%;
+		overflow: hidden;
+	}
+
+	#visual a>div{
+		float: left;
+		width: 300px;
+		height: 200px;
+
+		background-color: red;
+		margin: 10px;
+	}
+
+
+
+</style>
+<script>
+	$(()=>{
+		$("#gnb .m").on("mouseenter focusin",function(){
+
+			$("ul", this).show();
+			$(this).siblings('li').find('ul').hide();
+			$(this).addClass("on").removeClass("on");
+
+		}).on("mouseleave",function(){
+
+			$("#gnb ul").hide().add("#gnb .m").removeClass("");
+
+		});
+
+		$("*:not('#gnb a')").on("focus",function(){
+
+			$("#gnb ul").hide().add("#gnb .m").removeClass("on");
+
+		})
+	})
+</script>
+</head>
+<body>
+	<h1><a href="#">기본 효과 메서드</a></h1>
+	<ul id="gnb">
+		<li class="m"><a href="#">메뉴1</a>
+			<ul>
+				<li><a href="#">메뉴1-1</a></li>
+				<li><a href="#">메뉴1-2</a></li>
+				<li><a href="#">메뉴1-3</a></li>
+				<li><a href="#">메뉴1-4</a></li>
+			</ul>
+		</li>
+		<li class="m"><a href="#">메뉴2</a>
+			<ul>
+				<li><a href="#">메뉴2-1</a></li>
+				<li><a href="#">메뉴2-2</a></li>
+				<li><a href="#">메뉴2-3</a></li>
+				<li><a href="#">메뉴2-4</a></li>
+			</ul>
+		</li>
+		<li class="m"><a href="#">메뉴3</a>
+			<ul>
+				<li><a href="#">메뉴3-1</a></li>
+				<li><a href="#">메뉴3-2</a></li>
+				<li><a href="#">메뉴3-3</a></li>
+				<li><a href="#">메뉴3-4</a></li>
+			</ul>
+		</li>
+		<li class="m"><a href="#">메뉴4</a>
+			<ul>
+				<li><a href="#">메뉴4-1</a></li>
+				<li><a href="#">메뉴4-2</a></li>
+				<li><a href="#">메뉴4-3</a></li>
+				<li><a href="#">메뉴4-4</a></li>
+			</ul>
+		</li>
+		<li class="m"><a href="#">메뉴5</a>
+			<ul>
+				<li><a href="#">메뉴5-1</a></li>
+				<li><a href="#">메뉴5-2</a></li>
+				<li><a href="#">메뉴5-3</a></li>
+				<li><a href="#">메뉴5-4</a></li>
+			</ul>
+		</li>
+	</ul>
+	<div id="visual"><a href="#">
+
+		<div class="a"></div>
+		<div class="a"></div>
+		<div class="a"></div>
+	</a></div>
+	
+
+</body>
+</html>
+```
