--- a/4월 3주차/4월 21일.MD
+++ b/4월 3주차/4월 21일.MD
@@ -1,1 +1,29 @@
+# Review
+jQuery
+- 구현방법
+```html
+$(()=>{
+  $(선택자).이벤트(function(){
+              $(선택자).메서드().메서드()....
+});
+```
 
+효과
+- show(speed, easing, callback) : 보여주기
+- hide() : 사라지기, >> toggle()
+- slideDown() : 아래로 슬라이드
+- slideUp() : 위로 슬라이드
+- fadeIn() : 서서히 나타나기
+- fadeOut() : 서서히 사라지기 >> fadToggle()
+- fadeTo(0.5) : 0~1 사이 opacity
+1) Speed(속도) : slow, fast, milliseconds
+2) Easing(움직임효과) : swing, linear
+3) Callback : 종료 후 실행함수
+
+-----------------------------------------------------------------------------------------------
+
+# 오늘의 학습목표
+- JQuery 기본문법과 유용한 효과 학습
+- * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
+- 평가일시 : 5/1(월)
+- 포트폴리오 페이지 작성
