--- a/4월 3주차/4월 21일.MD
+++ b/4월 3주차/4월 21일.MD
@@ -20,6 +20,29 @@ $(()=>{
 2) Easing(움직임효과) : swing, linear
 3) Callback : 종료 후 실행함수
 
+이벤트
+- 직접 적용
+```
+  선택자.click(function(event){
+        event.preventDefault();
+  });
+  
+  선택자.on("click", function(){
+  });
+```
+- 강제 적용
+```
+  - trigger
+  
+  선택자.on("click", function(){
+  });.triger("click");
+  
+  $("btn:eq(2)").on("click",function(){
+      $("btn:eq(0)").trigger("click")
+  });
+```
+
+
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
