--- a/4월 3주차/4월 21일.MD
+++ b/4월 3주차/4월 21일.MD
@@ -42,6 +42,13 @@ $(()=>{
   });
 ```
 
+애니메이션..
+- 1 -> 2-> 3->
+- stop(clearQueue, jumpToEnd)
+- stop()==stop(false,false) : 현재 적용되는 애니메이션중지, 다음 애니메이션 실행
+- stop(true) : 현재 애니메이션을 중지하고 다음에 대기하고 있던 애니메이션을 제거
+- stop(false,true) : 현재 적용되는 애니메이션은 건너뛰고, 다음에 대기하고 있던 애니메이션을 실행
+- stop(true,true) : 현재 적용되던 애니메이션은 건너뛰고, 다음 대기하던 애니메이션을 제거한다.
 
 -----------------------------------------------------------------------------------------------
 
