--- a/4월 3주차/4월 21일.MD
+++ b/4월 3주차/4월 21일.MD
@@ -53,7 +53,8 @@ $(()=>{
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- JQuery 기본문법과 유용한 효과 학습
+- JQuery  유용한 효과 학습
+- 
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
 - 평가일시 : 5/1(월)
 - 포트폴리오 페이지 작성
