--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -1,20 +1,14 @@
 # Review
-Window / location / screen 객체활용
-- 새로운 창 만들기 열기
-- 지정된 시간 후 페이지 이동
-```
-  . let newWin = window.open('url', 'name', '윈도우모양크기 문자열')
-  . window.location = url ( 예 : select[select.selectedIndex].value )
-```
-- 반복 호출
-1) setTimeout('코드 | 함수',time);
-2) setInterval('코드 | 함수',time);
-- screen 속성
-1) availHeight / availWidth : 작업표시줄 제외하고 브라우저 출력 가능
-2) Height / width : 스크린 수직/수평 픽셀수
+제이쿼리
 
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- 그래픽, 지도를 이해하고 적용할 수 있다.
+JQuery 활용
+- 새로운 창 열기
+- 동적 클래스 추가를 활용한 링크
+- 간단한 탭 구현
+
+***Bootsrap 환경설정 및 grid레이아웃***
+
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
