--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -12,3 +12,23 @@ JQuery 활용
 ***Bootsrap 환경설정 및 grid레이아웃***
 
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
+
+### hash
+-  hash: href속성에서 #부터 끝까지.. >> $('#description').show
+```html
+<script>
+
+	$(()=>{
+		$('#tabs a').bind('click',function(){
+
+			$('.tabs-section:visible').hide(); //보이는 tab-section을 모두 감춘다.
+			$(this.hash).show();
+				// hash: href속성에서 #부터 끝까지.. >> $('#description').show
+				//							>>	$('#photos').show
+			e.preventDefault;	//
+
+		});
+	});
+
+</script>
+```
