--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -13,22 +13,102 @@ JQuery 활용
 
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
 
-### hash
--  hash: href속성에서 #부터 끝까지.. >> $('#description').show
+### tab해서 원하는 탭만 보이게 하기
+- "current"는 현재 선택된 탭을 표시하기 위한 CSS 클래스입니다.
 ```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	#tabs{
+		overflow: hidden;
+		zoom: 1;
+	}
+
+	#tabs li{
+		display: block;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		float: left;
+	}
+
+	#tabs li a{
+		display: block;
+		padding: 2px 5px;
+		border: 2px solid #ccc;
+		border-bottom: 0 none;
+		text-align: center;
+	}
+
+	.tab-section{
+		padding: 10px;
+		border: 2px solid #ccc;
+	}
+
+	#tabs li a.current{
+		background: blue;
+		color: white;
+	}
+
+</style>
+<script type="text/javascript" src="./script/jquery-3.6.4.js"></script>
 <script>
 
 	$(()=>{
-		$('#tabs a').bind('click',function(){
 
-			$('.tabs-section:visible').hide(); //보이는 tab-section을 모두 감춘다.
+		$('#tabs a').bind('click',function(){
+			$('#tabs a.current').removeClass('current');
+			$('.tab-section:visible').hide(); //보이는 tab-section을 모두 감춘다.
 			$(this.hash).show();
 				// hash: href속성에서 #부터 끝까지.. >> $('#description').show
 				//							>>	$('#photos').show
-			e.preventDefault;	//
+			
+			$(this).addClass('current');
+			e.preventDefault();	// a태그의 기본기능을 막아놓는다.
 
-		});
+		}).filter(':first').click();
+			// filter() : 이전에 선택한 요소집합
+			// 이전에 선택한 (#tabs ul속 태그)를 모두 묶어서 선택
 	});
 
 </script>
+</head>
+<body>
+	<h1>간단한 탭구현</h1>
+	<br>
+
+	<ul id="tabs">
+		<li><a href="#description" style="background: skyblue;">제품설명</a></li>
+		<li><a href="#photos" style="background: skyblue;">제품사진</a></li>
+		<li><a href="#details" style="background: skyblue;">상세설명</a></li>
+		<li><a href="#review" style="background: skyblue;">사용자후기</a></li>
+		<li><a href="#related" style="background: skyblue;">추천제품</a></li>
+	</ul>
+
+	<div id="description" class="tab-section" style="background: skyblue;">
+		<h2>제품설명</h2>
+		<p>여기 세션에는 기본적인 제품에 대한 소개의 내용을 포함합니다.</p>
+	</div>
+	<div id="photos" class="tab-section" style="background: burlywood;">
+		<h2>제품사진</h2>
+		<p>여기 세션에는 제품에 대한 사진을 정렬하여 소개합니다.</p>
+	</div>
+	<div id="details" class="tab-section" style="background: yellowgreen;">
+		<h2>상세설명</h2>
+		<p>여기 세션에는 제품에 대한 크기, 무게, 색상, 재질, 가격등 상세한 정보를 리스트해서 보여줍니다.</p>
+	</div>
+	<div id="review" class="tab-section" style="background: goldenrod;">
+		<h2>사용자후기</h2>
+		<p>모든 제품에 대한 사용자 후기를 리스트로 보여줍니다.</p>
+	</div>
+	<div id="related" class="tab-section" style="background: lightpink;">
+		<h2>추천제품</h2>
+		<p>고객에게 최고의 제품과 이벤트 제품을 추천합니다.</p>
+	</div>
+</body>
+</html>
 ```
