--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -13,6 +13,14 @@ JQuery 활용
 
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
 
+## 부트스트랩
+- Bootstrap = css스타일 + jQuery를 기반으로 한 자바스크립트 + 컴포넌트
+- 반응형 웹 적용 : 웹 페이지가 가변적으로 변할떄 반응형 웹페이지로 바뀐다.
+- 모바일 웹 사이트 개발가능
+
+2010년 중반 트위터 개발자 중 @modo와 @fat 아이디를 사용하는 개발자가 만든 오픈소스 프레임 워크
+- 프레임 워크 : '짜여진 작업' 즉, HTML, CSS, JavaScript, 다양한 UI 컴포넌트로 구성되어 있다.
+
 ### tab해서 원하는 탭만 보이게 하기
 - "current"는 현재 선택된 탭을 표시하기 위한 CSS 클래스입니다.
 ```html
