--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -9,6 +9,17 @@ JQuery 활용
 - 동적 클래스 추가를 활용한 링크
 - 간단한 탭 구현
 
+### 부트스트랩 이론
+```html
+<!-- 
+	Crossorigin속성
+		. 무결성
+		. 일치하지 않는 컨텐츠를 로드하지 못하도록 한다.
+	integrity
+		. 보안을 위해서 해시값이 브라우저와 일치해야만 실행하도록 설정한다.
+ -->
+```
+
 ***Bootsrap 환경설정 및 grid레이아웃***
 
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작업
