--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -32,6 +32,12 @@ JQuery 활용
 2010년 중반 트위터 개발자 중 @modo와 @fat 아이디를 사용하는 개발자가 만든 오픈소스 프레임 워크
 - 프레임 워크 : '짜여진 작업' 즉, HTML, CSS, JavaScript, 다양한 UI 컴포넌트로 구성되어 있다.
 
+### 부트스트랩 레이아웃 - 그리드시스템
+- 부트스트랩의 핵심 레이아웃 시스템이다.
+- 부트스트랩은 기본적으로 반응형(responsive)를 기반으로 만들어 졌기 때문에
+- 화면 해상도가 변경될 때마다 레이아웃은 그에 맞게 변경되게 되어 있다.
+
+
 ### tab해서 원하는 탭만 보이게 하기
 - "current"는 현재 선택된 탭을 표시하기 위한 CSS 클래스입니다.
 ```html
@@ -128,6 +134,68 @@ JQuery 활용
 		<h2>추천제품</h2>
 		<p>고객에게 최고의 제품과 이벤트 제품을 추천합니다.</p>
 	</div>
+</body>
+</html>
+```
+
+###Container girde 잡기 연습
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=divice-width, initial-scale=1">
+<title>Insert title here</title>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+<style>
+	.container{
+		border: 1px solid black;
+	}
+
+	.row{
+		margin: 5px 1px;
+	}
+
+	.a{
+		height: 500px;
+	}
+	p{
+		text-align: center; font-size: 20px; font-weight: bolder;
+	}
+
+</style>
+</head>
+<body>
+
+	<div class="container" style="background-color: lightgray;">
+		<div class="row">
+
+			<div class="col-md-8" style="background-color: khaki;">
+				<p>.col-md-8</p>
+				<div class="row a">
+					<div class="col-md-4" style="background-color: blue;">col-md-4</div>
+					<div class="col-md-8" style="background-color: green;">col-md-8</div>
+				</div>
+			</div>
+
+			<div class="col-md-4" style="background-color: lightblue;">
+				<p>.col-md-4</p>
+				<div class="row a">
+					<div class="col-md-6" style="background-color: pink;">col-md-6</div>
+					<div class="col-md-6" style="background-color: purple;">col-md-6</div>
+				</div>
+			</div>
+		
+		</div>
+
+	</div>
+
+	<script src="./js/jquery-3.6.4.js"></script>
+	<script>
+	
+	</script>
+	<script src="./js/bootstrap.min.js"></script>
+
 </body>
 </html>
 ```
