--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -199,3 +199,65 @@ JQuery 활용
 </body>
 </html>
 ```
+
+### 그리드 간격 건너뛰기 offset
+```html
+<!DOCTYPE html>
+<!-- 
+	그리드 배치에서 간격띄기
+		.offset-md-x : 
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=divice-width, initial-scale=1">
+<title>Insert title here</title>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+<style>
+	*{
+		text-align: center;
+	}
+
+	.container{
+		background: lightgray;
+	}
+
+	div[class*='md']{
+		height: 150px;
+		border: 1px solid black;
+		background: lightgreen;
+
+	}
+
+	p{
+		font-size: 18px;
+		font-weight: bolder;
+		text-align: center;
+	}
+
+</style>
+</head>
+<body>
+<h3>offset-md-x : x만큼 건너뛰기</h3>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-5">
+				<p>.col-md-5</p>
+			</div>
+			<div class="col-md-5 offset-md-2">
+				<p>.col-md-5 offset-md-2</p>
+				<p>.col-md-5을 2칸 건너뛰고 배치시킨다.</p>
+			</div>
+		</div>
+	</div>
+
+	
+
+	<script src="./js/jquery-3.6.4.js"></script>
+
+	<script src="./js/bootstrap.min.js"></script>
+
+</body>
+</html>
+```
