--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -18,6 +18,37 @@ JQuery 활용
 	integrity
 		. 보안을 위해서 해시값이 브라우저와 일치해야만 실행하도록 설정한다.
  -->
+
+<!-- 
+	1. margin
+		;	일괄지정 : m-0 ~ m-5
+
+			m-1 : 글자크기(16)	* 0.25	= 4 -- 4px	- 1/4
+			m-2 : 			* 0.5	= 8 -- 8px	- 1/2
+			m-3 : 			* 1.0		-- 16px
+			m-4 :			* 1.5		-- 24px
+			m-5 :			* 3			-- 48px
+			m-auto : 자동으로 여백조정
+			ml-auto : 왼쪽 마진을 최대한 확보하라는 의미 >> 오른쪽으로 정렬
+			mr-auto : 오른 마진을 최대한 확보 >> 왼쪽으로 정렬
+			* padding도 동일
+
+
+				my					mt
+			mx		mx			ml		mr
+				my					mb
+
+	2. padding
+		;	일괄지정 : p-0 ~ p-5
+				py					pt
+			px		px			pl		pr
+				py					pb
+
+	3. width/height - 부모기준
+		;	w - 25 / 50 / 75 / 100
+		;	h - 25 / 50 / 75 / 100
+ -->
+
 ```
 
 ***Bootsrap 환경설정 및 grid레이아웃***
