--- a/4월 4주차/4월 24일.MD
+++ b/4월 4주차/4월 24일.MD
@@ -17,9 +17,7 @@ JQuery 활용
 		. 일치하지 않는 컨텐츠를 로드하지 못하도록 한다.
 	integrity
 		. 보안을 위해서 해시값이 브라우저와 일치해야만 실행하도록 설정한다.
- -->
-
-<!-- 
+ 
 	1. margin
 		;	일괄지정 : m-0 ~ m-5
 
@@ -47,10 +45,24 @@ JQuery 활용
 	3. width/height - 부모기준
 		;	w - 25 / 50 / 75 / 100
 		;	h - 25 / 50 / 75 / 100
- -->
+ 
 
-<!--
-	
+
+배경색 : bg-info, bg-warning, bg-primary, bg-secondary
+ 	 bg-danger, bg-light, bg-dark, bg-body, bg-white
+	 bg-success
+글자색 : text-primary, text-success, text-muted 등
+링크색 : a 태그 안에서 글자색 클래스 지정
+글자크기 : lighter, smaller text, smaller
+	. h1 : 36px
+	. h2 : 30px
+	. h3 : 24px
+
+기본 줄간격 : 1.428px
+p요소의 하단여백 : 10px
+
+  * <h1 class = "small text-muted bg-light"> 글자 </h1>
+
 
  -->
 
