--- a/4월 4주차/4월25일.MD
+++ b/4월 4주차/4월25일.MD
@@ -4,7 +4,12 @@
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-JQuery 활용
-- 새로운 창 열기
-- 동적 클래스 추가를 활용한 링크
-- 간단한 탭 구현
+Bootstrap CSS
+- 한글처리 / 정렬 등
+- 네비게이션 구현과 정렬
+- 테이블 / 폼 / 버튼과 이미지 등
+
+웹 포트폴리오 화면구현
+- 평가일시 : 5/1(월)
+- 포트폴리오 페이지 작성
+- 6~7교시 : 학습내용 실습 + 
