--- a/4월 4주차/4월25일.MD
+++ b/4월 4주차/4월25일.MD
@@ -13,3 +13,32 @@ Bootstrap CSS
 - 평가일시 : 5/1(월)
 - 포트폴리오 페이지 작성
 - 6~7교시 : 학습내용 실습 + 
+
+
+### bootstrap 이용 around 해서 navagition bar 비율 맞추기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Insert title here</title>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+</head>
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/jquery-3.6.4.js"></script>
+<body>
+	<div class="container border mt-5">
+		<p><h3>navigation bar 정렬</h3></p>
+		<ul class="nav justify-content-around bg-light">
+			<li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">page1</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">page2</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">page3</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">page4</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#">page5</a></li>
+		</ul>
+	</div>
+</body>
+</html>
+```
