--- a/4월 4주차/4월25일.MD
+++ b/4월 4주차/4월25일.MD
@@ -42,3 +42,69 @@ Bootstrap CSS
 </body>
 </html>
 ```
+
+### card 만들기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Insert title here</title>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/jquery-3.6.4.js"></script>
+<style>
+	.card{
+		box-shadow: 2px 2px 3px black;
+	}
+</style>
+</head>
+<body>
+
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="card border">
+					<img class="card-img-top" src="./images/cat2.jpg" width="300px">
+					<div class="card-body">
+						<h3 class="card-title">봄나들</h3>
+						<p class="card-text">따뜻한 봄날에 사람들은 나들이도 하고 맛있는것도 먹습니다.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card border">
+					<img class="card-img-top" src="./images/cat2.jpg" width="300px">
+					<div class="card-body">
+						<h3 class="card-title">봄나들</h3>
+						<p class="card-text">따뜻한 봄날에 사람들은 나들이도 하고 맛있는것도 먹습니다.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card border">
+					<img class="card-img-top" src="./images/cat2.jpg" width="300px">
+					<div class="card-body">
+						<h3 class="card-title">봄나들</h3>
+						<p class="card-text">따뜻한 봄날에 사람들은 나들이도 하고 맛있는것도 먹습니다.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card border">
+					<img class="card-img-top" src="./images/cat2.jpg" width="300px">
+					<div class="card-body">
+						<h3 class="card-title">봄나들</h3>
+						<p class="card-text">따뜻한 봄날에 사람들은 나들이도 하고 맛있는것도 먹습니다.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	
+</body>
+</html>
+```
