--- a/4월 4주차/4월25일.MD
+++ b/4월 4주차/4월25일.MD
@@ -108,3 +108,142 @@ Bootstrap CSS
 </body>
 </html>
 ```
+
+-------------------------------------------------------------------------------
+
+# 포트폴리오에 쓸 bootstrap
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Insert title here</title>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+<script src="./js/bootstrap.min.js"></script>
+<style>
+	.form-control:focus{
+		border-color: #66afe9;
+		outline: 0;
+		box-shadow: inset 0 1px 1px rgba(0,0,0,0.75),
+							0 0 8px rgba(102,175,233,6);
+	}
+</style>
+</head>
+<body>
+	<div class="container mt-5">
+		<div>
+			<form role="form">
+				<div class="form-group">
+					<label for="name">이름</label>
+					<input type="text" class="form-control" placeholder="이름">
+				</div>
+				<div class="form-group">
+					<label for="name">이메일</label>
+					<input type="text" class="form-control" placeholder="이름">
+				</div>
+			</form>
+		</div>
+	</div>
+
+	<br><br>
+
+	<div class="container mt-1 p-3">
+		<div>
+			<!-- <h3>Form-horizontal 및 col등 클래스 선택자 적용</h3> -->
+			<form class="form-horizontal" role="form">
+				<div class="form-group">
+					<div class="row">
+						<label for="email" class="col-xs-2 col-lg-2 control-label">이름</label>
+						<div class="col-xs-10 col-lg-10">
+							<input type="text" class="form-control" placeholder="이름">
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="row">
+						<label for="password" class="col-xs-2 col-lg-2 control-label">이메일</label>
+						<div class="col-xs-10 col-lg-10">
+							<input type="text" class="form-control" placeholder="이메일">
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="row">
+						<label for="memo" class="col-xs-2 col-lg-2 control-label">메모</label>
+						<div class="col-xs-10 col-lg-10">
+							<textarea>00</textarea>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="row">
+						<label for="fruits" class="col-xs-2 col-lg-2 control-label">과일</label>
+						<div class="col-xs-10 col-lg-10">
+							<input type="checkbox">사과
+							<input type="checkbox">배
+							<input type="checkbox">딸기
+							<input type="checkbox">자두
+							<input type="checkbox">오렌지
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="row">
+						<label for="grade" class="col-xs-2 col-lg-2 control-label">학년</label>
+						<div class="col-xs-10 col-lg-10">
+							<input type="radio" name="grade">1학년
+							<input type="radio" name="grade">2학년
+							<input type="radio" name="grade">3학년
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
+				<img src="./images/cat2.jpg" class="img-thumbnail" width="200" height="200">
+			</div>
+			<div class="col-md-4">
+				<img src="./images/cat2.jpg" class="img-thumbnail" width="200" height="200">
+			</div>
+			<div class="col-md-4">
+				<img src="./images/cat2.jpg" class="img-thumbnail" width="200" height="200">
+			</div>
+		</div>
+
+		<div class="col-12">
+			<table class="table table-bordered table-hover table-striped">
+				<tr>
+					<th>번호</th>
+					<th>제목</th>
+					<th>글쓴이</th>
+					<tr>
+						<td>1</td>
+						<td>테이블테이블테이블</td>
+						<td>임꺽정</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>테이블테이블테이블</td>
+						<td>임꺽정</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>테이블테이블테이블</td>
+						<td>임꺽정</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>테이블테이블테이블</td>
+						<td>임꺽정</td>
+					</tr>
+				</tr>
+			</table>
+		</div>
+
+	</div>
+</body>
+</html>
+```
