--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -4,12 +4,34 @@
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-Bootstrap CSS
-- 한글처리 / 정렬 등
-- 네비게이션 구현과 정렬
-- 테이블 / 폼 / 버튼과 이미지 등
+SQL
 
 웹 포트폴리오 화면구현
 - 평가일시 : 5/1(월)
 - 포트폴리오 페이지 작성
 - 6~7교시 : 학습내용 실습 + 
+
+## 데이터 베이스 관리 시스템(DBMS)
+```
+DBMS 사용 이유
+
+데이터 및 표현 및 저장방식으로부터 독립화 가능(파일시스템은 컴퓨터시스템에 종속적)
+- 기존 파일시스템 : 위치, 구조를 해당 프로그램만 알 수 있어서 공유 불가능하다.
+- 구조의 변경이 프로그램의 변경으로 이어질 수 있다.
+
+>> DBMS는  논리적 데이터 독립성 : 데이터의 구조가 변경되더라도 프로그램의 구조가 변경되지 않는다.
+           물리적 데이터 독립성 : 보조기억장치와 같이 파일과 관련된 시스템 구조가 변경되더라도
+           프로그램은 그대로 유지된다.
+           
+. 인덱스를 활용한 빠른 데이터 접근가능
+  -
+
+. 데이터에 대한 무결성 제약조건의 준수가능
+  - 데이터의 무결성 훼손 : 하나의 사실을 표시하는 두 개 이상의 중복된 데이터가 서로 일치하지 않는 경우 발생
+                          데이터가 일정한 형식을 만족하지 않는 경우 발생
+                          
+. 여러 사용자들의 동시 접근 가능
+  - 동시에 접근하여 발생하는 문제를 통제하여 예방해야 한다. 프로그램으로 접근제어는 불가능하다.
+
+. 장애복구 및 보안 기능의 지원
+```
