--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -35,3 +35,39 @@ DBMS 사용 이유
 
 . 장애복구 및 보안 기능의 지원
 ```
+
+### 데이터 모델이란?
+```
+현실 세계에 존재하는 정보와 현상을 선과 도형 등을 이용 개체, 속성, 관계, 제약조건등을
+추상화 하여 전체 구조와 역할을 한눈에 알아볼 수 있도록 쉽게 표현해 놓은 것
+
+           즉, >> 현실 세계의 추상화
+           (목적)       1. 프로그래머, 데이터베이스 설계자, 의뢰인 등과의 의사소통 수단
+                        2. 프로젝트 수정 및 확장을 위한 대비책
+                        
+데이터를 기술하기 위한 데이터 모델의 종류
+           . 네트워크 모델(network model)
+           . 계층적 모델(hierachical model)
+           . 관계형 모델(relation model) -> 데이터표현방식 단순
+           . 객체 모델(object model)
+           . 객체 관계 모델(object relational model)
+
+
+```
+
+### DBMS의 특징?
+```
+프로그램과 데이터의 독립성 및 추상화
+
+자기 기술성
+    - 데이터 자체 뿐만 아니라 데이터에 대한 정의나 의미까지 관리(메타데이터 포함)
+           예) 2023년 4월 26일 23도    값
+           
+다중 뷰
+    - 필요한 부분만 추출해서 제공할 수 있는 뷰(view) 지원
+    
+다수 사용자 요청처리
+    - 트랜잭션, 동시성 제어 기법 기능 내장 되어 있다.
+```
+
+
