--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -70,4 +70,18 @@ DBMS 사용 이유
     - 트랜잭션, 동시성 제어 기법 기능 내장 되어 있다.
 ```
 
-
+## 모델링(Modeling)
+```
+1. 모델링란?
+- 효율적인 데이터베이스를 사용하기 위한
+ 첫단계인 사용자 요구사항 분석 - 마지막 단계인 물리적 데이터베이스
+ 모델링 단계에 이르기 까지 데이터 베이스를 만들어 가는 과정을
+ 논리적/체계적으로 정리하여 최적의 데이터 베이스 시스템이 될 수 잇도록
+ 하는 과정을 일커든다.
+ 
+ 2. 모델링 단계
+ - 개념적 모델링
+ - 논리적 모델링
+ - 물리적 모델링 ------>> Data Model 도출 (과정 거쳐서)
+ 
+```
