--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -11,6 +11,12 @@ SQL
 - 포트폴리오 페이지 작성
 - 6~7교시 : 학습내용 실습 + 
 
+
+이론
+```
+Entity : 현실세계에 존재하는 실체를 의미한다.
+```
+
 ## 데이터 베이스 관리 시스템(DBMS)
 ```
 DBMS 사용 이유
@@ -85,3 +91,68 @@ DBMS 사용 이유
  - 물리적 모델링 ------>> Data Model 도출 (과정 거쳐서)
  
 ```
+
+### 데이터 모델링
+```
+데이터 개체를 정의 -> 개체들 사이의 의미를 정의하는 작업과정
+
+. 숲 - 나무1             vs.         정보 내용 - 데이터 값1
+       나무2                                    데이터 값2
+       나무3                                    데이터 값3
+            <이해하기 쉽게 추상화 방법 - 현실 세계의 추상화>
+          
+. 작성 방법
+           . 현실세계를 모두 반영
+           . 오류나 왜곡이 존재하지 않도록
+           . 내용을 쉽게 볼 수 있도록
+           -> 도형, 선을 이용하여 개체, 속성, 관계, 제약조건 등을
+              한눈에 알아 볼 수 있도록 구성한다.
+              
+결과로 도출된 데이터 모델의 목적
+           1. 프로그래머, 데이터베이스 설계자, 의뢰인 등과 의사소통
+           2. 프로젝트의 수정 및 확장을 위한 대비책으로 활
+              
+```
+
+
+### 개념적 DB 모델링 - 추상화 : ER 다이어그램 작성
+```
+개체와 속성
+
+속성 종류
+단일 속성 / 복합 속성
+단일 속성 : 더이상 나눌수 없는 속성
+복합 속성 : 여러 속성으로 다시 나눌 수 있는 속성
+
+단일값 속성/ 다중값 속성
+단일값 속성 : 한개의 값만 가지는 속성
+다중값 속성 : 두개 이상의 값으로 표현되는 속성
+
+유도속성 / 저장속성
+유도 속성 : 다른 속성의 속성값으로 유도되어 결정되는 속성 (ex.나이)
+저장 속성 : 유도속성을 위해 사용되는 속성                (ex.생년월일)
+
+특수한 속성값 null
+개체가 속성에 값을 갖지 않을 떄 사용되는 임의의 값이다.
+- 해당사항 없음(inapplicable) : 특정 속성에 대해 해당되지 않을 때.
+- 알려지지 않음(unknown)      : 모르는 값(실제 존재하는지의 여부를 모를 때)
+```
+
+### 관계(Relationshio)
+```
+1) 개념
+
+- 개체집합과 개체집합 사이의 대응성. 즉, 사상(Mapping)을 말한다.
+- 두개 이상의 개체집합을 연결한 집단화로 구성된다.
+
+사상 원소수(mapping cardinality)
+: 다양한 관계를 분류하는 기준 사상원소수 (사상수)
+: 현실세계에는 여러가지 유형의 관계가 존재한다. ( 사람-사람, 사람-사물, 사물-사물 )
+
+1:! / 1:N 
+
+
+```
+
+
+
