--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -138,7 +138,7 @@ DBMS 사용 이유
 - 알려지지 않음(unknown)      : 모르는 값(실제 존재하는지의 여부를 모를 때)
 ```
 
-### 관계(Relationshio)
+### 관계(Relationship)
 ```
 1) 개념
 
@@ -149,9 +149,40 @@ DBMS 사용 이유
 : 다양한 관계를 분류하는 기준 사상원소수 (사상수)
 : 현실세계에는 여러가지 유형의 관계가 존재한다. ( 사람-사람, 사람-사물, 사물-사물 )
 
-1:! / 1:N 
+1:1 / 1:N / N:M 
+```
 
+## 논리적 DB 모델링 (논리적 스키마 작성)
+```
+1) 사상규칙 과정이다.
+개념적 모델링에 의한 ER 다이어그램을 관계형 모델을 바탕으로 한 스키마로 변환하는 과정을 정의한것
 
+<ER 다이어그램>            <논리적 스키마>
+개체(Entity)                 릴레이션(relation)
+속성(Attribute)              컬럼(column) - 필드
+식별자(identifier)           기본키(primary key)
+관계                         왜래키(foreign key)
+
+2) 정규화(normalization) 과정을 거친다.
+릴레이션에 존재하는 이상현상(anomaly)를
+제거해  DBMS가 효율적으로 데이터를 처리하도록 관계스키마를 형성하는 
+
+```
+
+### 관계 테이블
+```
+1) 기본키와 외래키
+    - 두개의 테이블이 관계를 이루는 경우 반드시 참조 무결성 제약조건이 만족되어야 한다.
+    
+    - 참조 무결성 제약조건이란? 두 테이블 사이의 일관성을 유지하는데 사용되는 제약조건
+    
+    - 한테이블에 있는 튜플이 관계를 맺고 있는 다른 테이블의 튜플을 참조하기 위해서는
+      참조되는 튜플이 그 테이블 내에 반드시 존재해야 하는 제약조건을 말한다.
+      
+    - 기본키(PK)와 외래키(FK)의 참조로 표현된다.
+    
+    기본키 : 한 테이블에서 튜플 간 중복되지 않은 값을 저장하고 있는 속성
+    외래키 : 튜플간 관계를 표현하기 위해 한 테이블의 기본키를 다른테이블에서 참조하고 있는 속성을 의미함
 ```
 
 
