--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -185,5 +185,7 @@ DBMS 사용 이유
     외래키 : 튜플간 관계를 표현하기 위해 한 테이블의 기본키를 다른테이블에서 참조하고 있는 속성을 의미함
 ```
 
-
-
+### 사상(Mapping) 규칙
+```
+사상규칙에 의해 ER다이어 그램의 모든 개체 및 관계가 관계데이터 모델에 따라 릴레이션, 즉 테이블(table)의 집합으로 표현됨
+```
