--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -188,4 +188,72 @@ DBMS 사용 이유
 ### 사상(Mapping) 규칙
 ```
 사상규칙에 의해 ER다이어 그램의 모든 개체 및 관계가 관계데이터 모델에 따라 릴레이션, 즉 테이블(table)의 집합으로 표현됨
+
+강한개체
+혼자서도 존재할 수 있다
+사번으로 구분 가능
+
+약한개체
+상위 개체 타입에 종속된 개체 타입
+혼자서는 존재할 수 없는 게체
+
+<<<변환시키는 단계별 방법>>>
+
+step1. 개체타입 정리
+    - 개체 타입은 릴레이션(테이블의 집합)으로 사상된다
+    - 개체 타입의 속성중 유일한 값과 다른 튜플과 중복이 없는 속성 하나를 기본 키로 지정한다.
+    
+step2. 약한 개체타입 정리
+    - 약한 개체도 하나의 릴레이션(테이블)로 사상
+    - 강한 개체 타입의 키 속성을 포함시킨다.
+    - 약한개체의 기본키는 강한객체의 기본키를 가져다가
+      복합키(기본키+외래키)로 사상한다.
+    !!! 약한 개체는 식별관계(실선)로 관계를 정의한다.
+    
+step3. 1:1 관계
+    - 두 릴레이션(개체) 중 한쪽의 릴레이션 기본키를 (어느쪽이든 상관없다)
+      다른 릴레이션의 외래키 속성으로 사상한다.
+
+step4. 1:N 관계
+    - 1쪽의 기본키를 >> N쪽에 외래키 속성으로 사상한다.
+    !!! 주로 강한개체로 관계가 정의되고, 점선으로 매핑된다.
+
+step5. M:N 관계
+    - 새로운 릴레이션을 하나 생성해서,
+    - 새 릴레이션에다 두 릴레이션 각각의 기본키를 각각 참조하도록 외래키를 속성으로 사상한다
+    
+step6. 다중 상속값
+    - 다중값 속성은 키를 포함하는 별도의 릴레이션으로 사상된다.
+    
+
+관계형 데이터베이스 모델에서 논리적 데이터베이스 스키마를 효과적으로 설계하는데 이용하는 기법이다.
+
+설계자의 목표는 정확한 위치에서 정확한 데이터를 넣는 것이 목적이다.
+
+즉, 논리적인 튜플 안에 데이터요소를 배치하고 효율적인 방법으로 유지관리하는 것이 목적이다.
+(데이터 불일치 제거), (데이터 중복 최소화)
+
+고려사항
+한 릴레이션 내의 속성들 간의 관계 표현
+원하지 않는 데이터의 종속과 중복제거
+새로운 속성이 데이터 베이스에 추가될 때, 기존 속성과의 관계 수정을 최소화
+최종적으로 데이터 저장을 위한 기억공간의 낭비를 줄이고, 데이터 베이스 내의 정보의 품질을 높인다.
+
+함수적 종속성
+: 릴레이션에서 속성 간의 관계를 연관관계로 표현한 것.
+: 일종의 제약조건을 의미한다.
+
+제 1 정규화(1NF)
+. 릴레이션의 각 속성값을 원자값(automic value)로 만드는 것
+    - 원자 값을 갖는다는 말?
+        : 속성(열)과 튜플(행)이 만나는 교차점의 데이터는 더이상 나눌수 없음을 말한다.
+        
+제 2 정규화(2NF)
+. 기본키에 속하지 않는 속성 모두가 기본키에 완전한 함수 종속적이어야 한다.
+
+제 3 정규화(3NF)
+. 2NF이면서 기본키에 속하지 않는 모든 속성이 기본키에 이행적 종속적이지 않은 릴레이션을 의미한다.
+
+
+        
 ```
