--- a/4월 4주차/4월 26일.MD
+++ b/4월 4주차/4월 26일.MD
@@ -253,7 +253,41 @@ step6. 다중 상속값
 
 제 3 정규화(3NF)
 . 2NF이면서 기본키에 속하지 않는 모든 속성이 기본키에 이행적 종속적이지 않은 릴레이션을 의미한다.
-
-
         
 ```
+
+#### mysql워크벤치에서 물리적 모델링 설계하기
+관계 정의하기
+```
+- 관계를 정의하는 이유는 개체 자체로만 표현할 수 있는 정보가 한정적이기 때문이다.
+- 관계
+1) 식별관계와 비식별 관계
+ . 관계는 부모개체의 기본키가 자식 개체의 기본키로 정의되느냐? <식별관계>
+   일반속성으로 정의되느냐? <비식별관계>
+  
+2) 사상원소수에 따른 관계 (5가지)
+ . 일대일 (1:1) 비식별 관계 ( 주민등록번호 - 사람 )
+ . 일대다 (1:N) 비식별 관계 ( 부서 - 직원 )
+ 
+ . 다대일(N:1), 여러개의 엔티티(개체)가 한 개의 엔티티(개체)와 관계를 가지느 경우 ( 여러명 직원 - 하나의 상사)
+ . 다대다(N:M) , 한 개체가 여러 개체와 관계를 가지고, 다른개체도 그와 같은경우
+                중간에 관계를 나타내는 연결테이블이 필요함 ( 학생 - 수업 )
+                
+ . 자기참조관계, 하나의 엔티티(개체)가 자기 자신과 관계를 가지는 경우 ( 조직도에서 한 직원이 자신의 상사와 관계 가지는것 )
+
+
+식별관계
+부모테이블의 기본키(PK)가 자식 테이블의 기본키로 전이되는 관계로 '실선'으로 표시된다. (약한관계-부양가족)
+자식테이블로 전이되는 부모테이블의 기본키이며, 외래키 이기도 하다.
+자식테이블의 각 인스턴스는 부모에 종속적이고 부모 테이블 없이는 존재할 수 없다.
+
+비식별관계
+부모테이블의 기본키(PK)가 자식 테이블의 일반 속성으로 전이되는 관계로 점선으로 표시한다.
+
+- 식별관계는 부모테이블의 기본키가 자식 테이블의
+
+
+```
+
+
+
