--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -1,5 +1,26 @@
 # Review
-제이쿼리
+모델링
+- 개체(Entity) - 속성
+- 관계(Relationship)
+- 제약조건
+
+ERD 작성
+- 화살표 : 1쪽이 화살표가 되도록 한다
+
+식별관계와 비 식별관계
+- 식별관계 : 부모의 기본키가 자식의 기본키로 활용 될 떄(실선)
+- 비식별관계 : 부모의 기본키가 자식의 외래키로 활용 될 떄(점선)
+
+기본키와 외래키
+- 개체집합은 릴레이션으로 변환된다. 그 속에 기본키를 지정한다.
+- 약한개체 집합은 강한개체 집합의 기본키를 자신의 기본키로 포함시킨다.
+- 1:1관계에서 다른 릴레이션의 기본키를 외래키로 포함시킨다.
+- 1:N관계에서 1쪽의 기본키를 N쪽의 외래키로 포함시킨다.
+- M:N관계에서 각각의 기본키를 N쪽의 외래키로 포함시킨다. 이때 포함된 기본키들은 외래키이기도 하므로 복합키이다.
+- 다중값 속성은 별도의 릴레이션으로 구성하고 현재의 기본키와 다중값 속성 둘을 새로운 릴레이션의 기본키로 지정한다.
+- 관계집합의 속성은 각각의 속성을 외래키가 위치한 릴레이션의 컬럼으로 삽입한다.
+
+Workbench에서 ERD(EER)를 그려서 논리적 개념의 모델링으로 구현할 수 있다.
 
 -----------------------------------------------------------------------------------------------
 
