--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -25,9 +25,34 @@ Workbench에서 ERD(EER)를 그려서 논리적 개념의 모델링으로 구현
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-SQL
+- ERD를 활용해서 Database를 구축한다.
+- DDL과 DML의 종류를 이해한다.
+- 데이터 타입의 종류를 숙지한다.
+- 테이블에 데이터를 입력하여 구현한다.
+
 
 웹 포트폴리오 화면구현
 - 평가일시 : 5/1(월)
 - 포트폴리오 페이지 작성
+- 화면설계를 기준으로 메인 페이지 및 추가 3페이지
+- html, css, javascript, jquery, bootstrap 적용
 - 6~7교시 : 학습내용 실습 + 포트폴리오
+
+
+### 이론
+```
+대소문자 구분 안함
+
+varchar vs char
+  char : 고정형
+  varchar : 가변
+
+
+-- 여러줄 주석
+#  한줄주석
+/*
+여러줄 주석
+*/
+```
+
+
