--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -56,3 +56,25 @@ varchar vs char
 ```
 
 
+### 테이블 만들기 기본
+```mysql
+show databases; -- 데이터베이스 조회
+use myschool;   -- 특정 데이터베이스 선택
+show tables;    -- 데이터베이스 안에 테이블 조회
+desc 강의;       -- 선택된 테이블의 구조조호
+
+create database testdb; -- 대소문자 구분안함
+use testdb;
+create table 학생(
+	학생번호 char(9) not null,
+    소속학과 varchar(30) not null,
+    학생이름 varchar(20) not null,
+    학년	  int not null,
+    성별	  char(4),
+    나이   int,
+    전화번호 varchar(13) not null,
+    주소   varchar(50),
+    
+    primary key(학생번호)
+);
+```
