--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -78,3 +78,24 @@ create table 학생(
     primary key(학생번호)
 );
 ```
+
+
+
+### 테이블 만들기 외래키 접근 다른 스키마에 있는 테이블 접근
+```html
+create table 강의(
+	강의번호 char(4) not null primary key,
+    강의이름 varchar(50) not null,
+    강의실  varchar(40) not null,
+    강의시간 varchar(20) not null,
+    인원제한 int not null,
+    이수구분 char(20) not null,
+    교수구분 char(4) not null,
+    선수과목 char(4),
+    
+    foreign key(교수번호) REFERENCES 교수(교수번호),
+    foreign key(선수과목) REFERENCES 강의(강의번호)
+);
+
+DESC myschool.수강신청; -- 다른 데이터베이스에 접근
+```
