--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -53,6 +53,47 @@ varchar vs char
 /*
 여러줄 주석
 */
+
+/*
+	데이터정의어(DDL)	:	CREATE - 스키마(database)
+							   - table
+                               - index
+                               - view
+						DROP   - 스키마(database)
+                        ALTER  - table
+                        
+    데이터조작어(DML)	:	INSERT - 삽입
+						SELECT - 검색
+                        UPDATE - 수정
+                        DELETE - 삭제
+		
+    데이터제어어(DCL)	:	GRANT - 권한부여
+						REVOKE - 권한회수
+                        
+	데이터타입
+		. 정수			- TINYINT	:	-128~127
+						- SAMLLINT	:	-32768~32767
+                        - MEDIUMMINT : 
+                        - INT		:	-2147483648 ~ 2147483647
+                        - BIGINT	:	엄청 큼
+                        
+        . 고정소수형		- DECIMAL	:	십진수표현 (DECIMAL(5,2) -> 99999.99)
+        . 부동소수형		- FLOAT , DOUBLE
+        . 문자			- CHAR(N) 	: 길이가 N인 고정된 문자열
+						- VARCHAR(N) : 최대 N개로 구성된 가변길이 문자열
+                        - TEXT		: 길이가 긴 가변길이 문자열
+                        - ENUM		: 유한개의 문자열집합중 하나의 값
+										예) enum('사원', '대리', '과장')
+        . 날짜 / 시간
+						- DATE 	:	'YYYY-MM-DD'
+                        - YEAR	:	'YYYY'
+                        - TIME	:	'00:00:00'
+                        - TIMESTAMP	:	'YYYY-MM-DD 00:00:00'
+        . 바이너리(이진수)
+						- TINYBLOB , BLOB(64kb), MEDIUMBLOB(16MB) , LONGBLOB(4GB)
+*/
+
+
 ```
 
 
@@ -82,7 +123,7 @@ create table 학생(
 
 
 ### 테이블 만들기 외래키 접근 다른 스키마에 있는 테이블 접근
-```html
+```mysql
 create table 강의(
 	강의번호 char(4) not null primary key,
     강의이름 varchar(50) not null,
@@ -99,3 +140,6 @@ create table 강의(
 
 DESC myschool.수강신청; -- 다른 데이터베이스에 접근
 ```
+
+
+
