--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -93,6 +93,13 @@ varchar vs char
 			- TINYBLOB , BLOB(64kb), MEDIUMBLOB(16MB) , LONGBLOB(4GB)
 */
 
+/*
+	ALTER TABLE 테이블이름
+		ADD COLUMN 컬럼명 데이터타입 [NOT NULL | NULL] [DEFAULT 기본값],
+        DROP COLUMN 컬럼명,
+        CHANGE COLUMN 수정 전 컬럼    수정 후 컬럼 데티터입 [NOT NULL | NULL] [DEFAULT 기본값]
+*/
+
 
 ```
 
