--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -101,6 +101,28 @@ varchar vs char
 */
 
 
+/*
+	제약조건
+	. primary key 절
+		- 하나 이상의 컬럼을 기본키로 설정할 수 있다.
+                - NULL이 될 수 없다.
+                - 이미 존재하는 키를 갖는 레코드를 신규생성하면 거부된다.
+	. NOT NULL절
+		- 입력되지 않는 레코드가 생성되면 거부된다.
+	. UNIQUE 절
+		- 레코드속의 UNIQUE라고 지정한 컬럼의 값은 유일해야한다.
+
+	CREATE TABLE 테이블이름 (
+		컬럼명 데이터타입 [not null | null] [DEFAULT 기본값],
+        ......,
+        [PRIMARY KEY(컬럼명)],
+        [UNIQUE(컬럼명)],
+        [FOREIGN KEY (외래키 컬럼)] REFERENCES 참조 할 테이블명(참조할컬럼)
+    );
+
+*/
+
+
 ```
 
 
