--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -111,6 +111,13 @@ varchar vs char
 		- 입력되지 않는 레코드가 생성되면 거부된다.
 	. UNIQUE 절
 		- 레코드속의 UNIQUE라고 지정한 컬럼의 값은 유일해야한다.
+		
+	. AUTO INCREMENT 절
+		- 지정된 컬럼에 값을 입력하지 않아도 자동으로 1씩 증가되어 자동입력된다.
+		
+	. FOREIGN KEY 
+	. CHECK
+		- check(잔액 > 0) 특정조을 준수하지 않으 
 
 	CREATE TABLE 테이블이름 (
 		컬럼명 데이터타입 [not null | null] [DEFAULT 기본값],
