--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -178,4 +178,27 @@ DESC myschool.수강신청; -- 다른 데이터베이스에 접근
 ```
 
 
+#### 제약조건 실습
+```mysql
+# 제약조건 실습
+/* 강의1의 테이블을 생성합니다.
+	. 모든 컬럼에 기본적으로 null을 허용하지 않습니다.
+	. 컬럼은 강의번호, 강의이름, 강의시간, 인원제한, 교수번호 로 구성
+    . 강의번호 기본키이고 자동으로 1씩 증가됩니다.
+    . 강의이름은 반드시 있어야하고 고유한 이름이어야 합니다.
+    . 인원제한은 50이라는 기본값을 갖고 정수입니다.
+    . 교수번호는 myschool 데이터베이스에 있는 교수테이블의 교수번호를 참조하고 길이가 3인 고정문자열입니다. foreign 사용해야할듯
+    . 강의 이름과 강의시간은 최대 20크기의 문자열로 구성됩니다.
+    
+*/ 
 
+create table 강의1(
+	강의번호 int AUTO_INCREMENT not null PRIMARY KEY ,
+    강의이름 varchar(20) not null unique,
+    강의시간 varchar(20) not null,
+    인원제한 int(10) default 50,
+    교수번호 char(5) not null
+);
+
+DESC 강의1
+```
