--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -40,7 +40,7 @@ Workbench에서 ERD(EER)를 그려서 논리적 개념의 모델링으로 구현
 
 
 ### 이론
-```
+```mysql
 대소문자 구분 안함
 
 varchar vs char
@@ -128,6 +128,27 @@ varchar vs char
     );
 
 */
+
+아래 예시 있음
+/*
+	인덱스(INDEX)
+		- 데이터의 응답시간을 단축하기 위해 인덱스를 제공한다.
+        - 생성1 - 자동지정
+			. primary key, foreign key, unique인 경우
+				내부적으로 자동생성되어 있다.
+                
+		- 생성2 - 명시적 지정
+			. create index 인덱스 on 테이블(컬럼명, 컬럼명,,)
+            
+		- 삭제 : drop index
+*/
+
+DESC 강의1;
+
+show index from 강의1;
+create index 강의시간조회1 on 강의1(강의시간);
+drop index 강의시간조회 on 강의1;
+drop index 강의시간조회1 on 강의1;
 
 
 ```
