--- a/4월 4주차/4월 27일.MD
+++ b/4월 4주차/4월 27일.MD
@@ -152,6 +152,17 @@ drop index 강의시간조회 on 강의1;
 drop index 강의시간조회1 on 강의1;
 
 
+/*
+	DML - 데이터 조작 언어를 말한다.
+		. INSERT, UPDATE, DELETE, SELECT
+        * 입력에는 순서가 있다.
+        
+	INSERT INTO 테이블명 values(값,값,값,,, "값" , 값)
+    SELECT * FROM 테이블명;
+*/
+
+
+
 ```
 
 
