--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -46,3 +46,29 @@ DML
 - 포트폴리오 페이지 작성
 - 화면설계를 기준으로 메인 페이지 및 추가 3페이지
 - html, css, javascript, jquery, boots
+
+
+
+
+### where 연습
+```mysql
+/*
+학생 테이블에서 현재 4학년 학생을 검색하여 등록한다.
+학생 테이블에서 법학과 학생들의 학생번호, 학생이름, 전화번호를 가져와서 등록한다.
+학생 테이블에서 나이가 35살인 학생의 모든 자료를 졸업예정자로 옮겨서 등록하시오.
+학생 테이블에서 나이가 29살이고 여자인 학생의 학생번호, 학생이름, 전화번호, 성별, 나이를 졸업예정자로 등록하시오
+*/
+
+SELECT *
+FROM 학생
+WHERE 학년 = 4;
+
+INSERT INTO 졸업예정자
+SELECT *
+FROM 학생
+WHERE 학년 = 4;
+
+
+```
+
+
