--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -81,4 +81,19 @@ WHERE 학년 = 4;
 
 ```
 
+### UPDATE 예제
+```mysql
+# 컴퓨타학과 강원상 부교수의 전화번호를 학생 최성우님의 연락처로 변경하시오.
 
+UPDATE 교수
+SET 전화번호 =
+
+(select 전화번호
+from 학생
+where 학생이름 = "최성우")
+
+where 교수이름 = "강원상";
+
+select *
+from 학생;
+```
