--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -56,6 +56,40 @@ UPDATE (수정)
 	. UPDATE 테이블 SET 컬럼명 -데이터, 컬럼명-데이터,,,,,
 
 */
+
+
+/*
+	SELECT
+		가장 많이 사용하고 꼭 알아야하는 질의어
+        
+        SELECT [DISTINCT] 컬럼, 컬럼,,,
+		FROM 테이블1 [INNER JOIN] | [OUTER JOIN] | [CROSS JOIN]
+            
+		테이블2
+		,,,,
+                테이블n
+                
+	[ON 테이블 조인조건식]
+        [WHERE 조건식]
+        [GROUP BY 컬럼, 컬럼... [HAVAING 조건식]
+	[ORDER BY 컬럼, 컬럼... [ASC | DESC]
+        
+        
+	. ON : 테이블 조인 연결방법을 기술한다.
+		기본-외래키 참조관계를 기술하여 관련있는 레코드를 연결한다.
+            
+	. WHERE(레코드) : 특정 조건에 만족하는 레코드만 검색할때 사용
+			산술연산자, 비교연산자, 논리연산자 ... 사용
+                
+ 	. GROUP BY : 특정컬럼 기준으로 동일한 조건의 값끼리 그룹으로 묶어서 요약된 결과를
+			출력해 볼 수 있는 기능
+			count() , min(), max(), sum(), avg() 집계함수
+	
+        . HAVING(컬럼) :
+			group by로 묶인 그룹내에서 조건을 주어 검색하고자 할때 사용
+				
+*/
+
 ```
 
 
