--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -87,6 +87,11 @@ UPDATE (수정)
 	
         . HAVING(컬럼) :
 			group by로 묶인 그룹내에서 조건을 주어 검색하고자 할때 사용
+			
+	. ORDER BY :
+			검색결과를 특정 칼럼을 기준으로 오름(Ascending) 내림(Descending) 정렬
+                
+	* : 모든, 테이블을 컬럼순으로 출력	/	원하는 순서대로 출력 - 컬럼 나열
 				
 */
 
