--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -95,6 +95,29 @@ UPDATE (수정)
 				
 */
 
+/*
+	조건 질의문
+		select 컬럼, 컬럼..... FROM 테이블
+			WHERE 조건질의문(비교/논리/특수)
+            
+		. 비교 : = , <=, >=, <,>, !=(<>)
+        	. 논리 : AND(&&), OR(||), NOT(!)
+
+
+*/
+
+
+/* 
+	특수 연산자
+		BETWEEN v1 AND v2 : v1과 v2 사이에 존재하는지 검사
+        	LIKI : 컬럼명 LIKE '서울%' - 문자열 검사
+				   '%서울'
+                	           '%서울%'
+                           
+		IN : 컬럼명 IN (v1, v2, v3) - v1,v2,v3와 일치하는지 검사
+        	IS NULL / IS NOT NULL : 컬럼값이 NULL인지 검사
+*/
+
 ```
 
 #### distinct 중복 제거 
