--- a/4월 4주차/4월 28일.MD
+++ b/4월 4주차/4월 28일.MD
@@ -118,6 +118,15 @@ UPDATE (수정)
         	IS NULL / IS NOT NULL : 컬럼값이 NULL인지 검사
 */
 
+/*
+	별명 (Alias) - AS
+		SELECT 컬럼, 컬럼, 컬럼 FROM 테이블
+        
+	산술연산자
+		+, -, *, /, %(MODE) 나머지, DIV(정수)
+       		 >> 원본 테이블에 영향을 주지는 않는다.
+*/
+
 ```
 
 #### distinct 중복 제거 
