--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -1,37 +1,21 @@
 # Review
-DDL
-```
-CREATE table 테이블 {
-  컬럼명 데이터타입 [not null] [efault] [auto increatment],
-  컬럼명 [null] check(컬럼명 IN(컬럼명,컬럼명,,)),
-  unique(컬럼),
-  primary key(컬럼),
-  foreign key(컬럼) references 테이블(컬럼명)
-}
-
- DROP table |database|
- 
- ALTER TABLE 테이블
-  ADD COLUMN ~~
-  DROP COLUMN ~~
-  CHANGE COLUMUMN 수정전 수정후 ~~
-  
-INDEX
-  CREATE INDEX 인덱스명 on 테이블(컬럼)
-  DROP INDEX 인덱스명 on 테이블
-```
 
 DML
-```
-  INSERT INTO 테이블 (c1, c2, c3,,,,,)
-    VALUES (d1, d2, d3,,,,,)
-```
+- INSERT INTO 테이블(컬럼,,,) VALUES("값", "값,,,");
+- INSET INTO 테이블(a,b,c) SELECT a,b,c from 가져올 테이블 where 조건;
+- UPDATE 테이블 SET 컬럼 = 값, 컬럼 = 값,,, WHERE 조건;
+- DELETE FROM 테이블 WHERE 조건
+- SELECT distinct 컬럼, 컬럼 as 별칭,,, ~ FROM ~~
+- WHERE 조건
+- ORDER BY acs | desc limit 수;
 
-데이터 타입
-- char, varchar, int, datetime,,,,,
+연산식
+- 산술연산식
+- 비교연산식
+- 논리연산식
+- 문자연산식 : conat(문자열, 문자열), insert(), reverse(문자열), replace(문자열, 바꿀문자), trim(문자열),,,
+- 특수연산식 : between a and b , like "%문자", in('값','값','값'); , is null, is not null;
 
-제약조건
-- primary key, foreign key, unique, default, auto increment, not null
 
 
 -----------------------------------------------------------------------------------------------
