--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -21,8 +21,7 @@ DML
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- SQL
-- 개인별 포트폴리오에 들어갈 Database ERD
+- SQL 함수
 
 
 웹 포트폴리오 화면구현
@@ -30,3 +29,15 @@ DML
 - 포트폴리오 페이지 작성
 - 화면설계를 기준으로 메인 페이지 및 추가 3페이지
 - html, css, javascript, jquery, boots
+
+
+### 함수 기본
+```mysql
+# 강의 테이블에서 이수구분이 '전공필수'인 강의의 강의이름, 이수구분, 강의시간, 인원제한을 15% 증가시킨 값을
+# 1의자리에서 버림한 '인원제한 15%'라는 항목으로 출력하시오.
+
+SELECT 강의이름, 이수구분, truncate(인원제한*0.15,-1) as '인원제한 15%'
+FROM 강의
+where 이수구분 = '전공필수';
+
+```
