--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -31,6 +31,44 @@ DML
 - html, css, javascript, jquery, boots
 
 
+### 이론
+```mysql
+/*
+	문자함수 : 문자열 추출이나 변경
+		. char_length(문자열)
+        . concat(문자열,문자열)
+        . insert(문자열 i번째, j개수, 대체문자열)
+        . lower(문자열), upper(문자열)
+        . left(문자열, i개), right(문자열, j개)
+        . substring(문자열, 시작 i개, j개)
+        . reverse(문자열)
+        . trim(문자열)
+
+	 숫자함수 : 계산
+		. ABS(숫자값) : 절대값
+		. SIN(x), COS(x), TAN(x) : 삼각함수
+        . CEILING(x), FLOOR(x)
+		. truncate(x,y)
+        ROUND(x,y) : y번째에서 반올림
+        MOD(x,y) : x를 y로 나눈 나머지 값
+        PI()
+        POWER(x,y) : x의 y승
+        RAND() : 0~1 사이의 랜덤값
+        SQRT(x) : x의 제곱근
+
+	날짜함수 : 날짜와 시간함수
+		. ADDDATE(x,interval y단위) : x날짜에 y단위 시간을 더한 날짜를 반환
+        . ADDTIME(x,y) : x에 y시간만큼을 더한 시간 반환
+        . CURRENT_DATE() : 현재 날짜 반환
+        . CURRENT_TIME() : 현재 시간 반환
+        . NOW() : 현재의 날짜와 시간을 반환
+        . DATE("년-월-일 시:분:초") : 년월일 반환
+        . DAY("년-월-일 시:분:초") : 날짜 반환
+
+*/
+```
+
+
 ### 함수 기본
 ```mysql
 # 강의 테이블에서 이수구분이 '전공필수'인 강의의 강의이름, 이수구분, 강의시간, 인원제한을 15% 증가시킨 값을
